@@ -65,10 +65,7 @@ public class FirebaseServerClient {
   /** NetworkManager instance for network operations. */
   private final NetworkManager networkManager = NetworkManager.getInstance();
 
-  /** SSL Pinning Manager for secure connections. */
-  private SSLPinningManager sslPinningManager;
-
-  /** Secure OkHttpClient for network requests. */
+    /** Secure OkHttpClient for network requests. */
   private OkHttpClient secureClient;
 
   /** The current server URL. */
@@ -105,7 +102,8 @@ public class FirebaseServerClient {
 
     // Initialize SSL pinning for production URLs
     boolean isProduction = serverUrl.contains("onrender.com") || serverUrl.contains("https://");
-    sslPinningManager = SSLPinningManager.getInstance(isProduction);
+      /** SSL Pinning Manager for secure connections. */
+      SSLPinningManager sslPinningManager = SSLPinningManager.getInstance(isProduction);
     secureClient = sslPinningManager.createSecureClient();
 
     Log.i(
@@ -587,22 +585,22 @@ public class FirebaseServerClient {
             throw new RuntimeException("Failed to get user", e);
           }
         },
-        new AsyncTaskReplacement.SimpleUICallback<User>() {
-          @Override
-          public void onPostExecute(User result) {
-            if (callback != null) {
-              callback.onSuccess(result);
-            }
-          }
+            new AsyncTaskReplacement.SimpleUICallback<>() {
+                @Override
+                public void onPostExecute(User result) {
+                    if (callback != null) {
+                        callback.onSuccess(result);
+                    }
+                }
 
-          @Override
-          public void onError(Exception error) {
-            Log.e(TAG, "Error getting user: " + userId, error);
-            if (callback != null) {
-              callback.onError(error.getMessage());
-            }
-          }
-        });
+                @Override
+                public void onError(Exception error) {
+                    Log.e(TAG, "Error getting user: " + userId, error);
+                    if (callback != null) {
+                        callback.onError(error.getMessage());
+                    }
+                }
+            });
   }
 
   public void saveUser(String userId, User user, final OperationCallback callback) {
@@ -623,31 +621,31 @@ public class FirebaseServerClient {
             String url = serverUrl + "/api/firebase/Users/" + encodedUserId;
             String json = gson.toJson(user);
             String response = makeHttpRequest(url, "PUT", json);
-            return response != null && !response.isEmpty();
+            return !response.isEmpty();
           } catch (Exception e) {
             throw new RuntimeException("Failed to save user", e);
           }
         },
-        new AsyncTaskReplacement.SimpleUICallback<Boolean>() {
-          @Override
-          public void onPostExecute(Boolean result) {
-            if (callback != null) {
-              if (result) {
-                callback.onSuccess();
-              } else {
-                callback.onError("Failed to save user");
-              }
-            }
-          }
+            new AsyncTaskReplacement.SimpleUICallback<>() {
+                @Override
+                public void onPostExecute(Boolean result) {
+                    if (callback != null) {
+                        if (result) {
+                            callback.onSuccess();
+                        } else {
+                            callback.onError("Failed to save user");
+                        }
+                    }
+                }
 
-          @Override
-          public void onError(Exception error) {
-            Log.e(TAG, "Error saving user: " + userId, error);
-            if (callback != null) {
-              callback.onError(error.getMessage());
-            }
-          }
-        });
+                @Override
+                public void onError(Exception error) {
+                    Log.e(TAG, "Error saving user: " + userId, error);
+                    if (callback != null) {
+                        callback.onError(error.getMessage());
+                    }
+                }
+            });
   }
 
   public void createUser(User user, final DataCallback<User> callback) {
@@ -659,32 +657,32 @@ public class FirebaseServerClient {
           // Background operation
           try {
             // URL encode the userId to handle special characters like @ and .
-            String encodedUserId = java.net.URLEncoder.encode(user.getUserKey(), "UTF-8");
+            String encodedUserId = java.net.URLEncoder.encode(user.getUserKey(), StandardCharsets.UTF_8);
             String url = serverUrl + "/api/firebase/Users/" + encodedUserId;
             String json = gson.toJson(user);
-            String response = makeHttpRequest(url, "POST", json);
+            makeHttpRequest(url, "POST", json);
             // Server returns empty response for POST, so return the original user object
             return user;
           } catch (Exception e) {
             throw new RuntimeException("Failed to create user", e);
           }
         },
-        new AsyncTaskReplacement.SimpleUICallback<User>() {
-          @Override
-          public void onPostExecute(User result) {
-            if (callback != null) {
-              callback.onSuccess(result);
-            }
-          }
+            new AsyncTaskReplacement.SimpleUICallback<>() {
+                @Override
+                public void onPostExecute(User result) {
+                    if (callback != null) {
+                        callback.onSuccess(result);
+                    }
+                }
 
-          @Override
-          public void onError(Exception error) {
-            Log.e(TAG, "Error creating user", error);
-            if (callback != null) {
-              callback.onError(error.getMessage());
-            }
-          }
-        });
+                @Override
+                public void onError(Exception error) {
+                    Log.e(TAG, "Error creating user", error);
+                    if (callback != null) {
+                        callback.onError(error.getMessage());
+                    }
+                }
+            });
   }
 
   public void updateUser(
@@ -706,31 +704,31 @@ public class FirebaseServerClient {
             String url = serverUrl + "/api/firebase/Users/" + encodedUserId;
             String json = gson.toJson(updates);
             String response = makeHttpRequest(url, "PUT", json);
-            return response != null && !response.isEmpty();
+            return !response.isEmpty();
           } catch (Exception e) {
             throw new RuntimeException("Failed to update user", e);
           }
         },
-        new AsyncTaskReplacement.SimpleUICallback<Boolean>() {
-          @Override
-          public void onPostExecute(Boolean result) {
-            if (callback != null) {
-              if (result) {
-                callback.onSuccess();
-              } else {
-                callback.onError("Failed to update user");
-              }
-            }
-          }
+            new AsyncTaskReplacement.SimpleUICallback<>() {
+                @Override
+                public void onPostExecute(Boolean result) {
+                    if (callback != null) {
+                        if (result) {
+                            callback.onSuccess();
+                        } else {
+                            callback.onError("Failed to update user");
+                        }
+                    }
+                }
 
-          @Override
-          public void onError(Exception error) {
-            Log.e(TAG, "Error updating user: " + userId, error);
-            if (callback != null) {
-              callback.onError(error.getMessage());
-            }
-          }
-        });
+                @Override
+                public void onError(Exception error) {
+                    Log.e(TAG, "Error updating user: " + userId, error);
+                    if (callback != null) {
+                        callback.onError(error.getMessage());
+                    }
+                }
+            });
   }
 
   // Messages methods
@@ -1043,7 +1041,6 @@ public class FirebaseServerClient {
                   Log.e(TAG, "Failed to fetch group for updating message keys");
                   errorMessage = "Failed to fetch group";
                   // Still return true since the message was saved
-                  success = true;
                 } else {
                   Log.d(TAG, "Group fetched successfully: " + groupId);
                   Log.d(TAG, "Group JSON: " + groupJson);
@@ -1079,8 +1076,8 @@ public class FirebaseServerClient {
                     Log.d(TAG, "Group message keys updated successfully for: " + groupId);
                   }
 
-                  success = true;
                 }
+                  success = true;
               } catch (JSONException e) {
                 Log.e(TAG, "Error updating group message keys", e);
                 errorMessage = "Error updating group message keys: " + e.getMessage();
@@ -1169,22 +1166,22 @@ public class FirebaseServerClient {
 
     AsyncTaskReplacement.execute(
         () -> makeDeleteRequest(path),
-        new AsyncTaskReplacement.SimpleUICallback<Boolean>() {
-          @Override
-          public void onPostExecute(Boolean success) {
-            if (success) {
-              callback.onSuccess();
-            } else {
-              callback.onError("Failed to delete data at path: " + path);
-            }
-          }
+            new AsyncTaskReplacement.SimpleUICallback<>() {
+                @Override
+                public void onPostExecute(Boolean success) {
+                    if (success) {
+                        callback.onSuccess();
+                    } else {
+                        callback.onError("Failed to delete data at path: " + path);
+                    }
+                }
 
-          @Override
-          public void onError(Exception error) {
-            Log.e(TAG, "Error deleting data at path: " + path, error);
-            callback.onError("Failed to delete data: " + error.getMessage());
-          }
-        });
+                @Override
+                public void onError(Exception error) {
+                    Log.e(TAG, "Error deleting data at path: " + path, error);
+                    callback.onError("Failed to delete data: " + error.getMessage());
+                }
+            });
   }
 
   /**
@@ -1281,8 +1278,7 @@ public class FirebaseServerClient {
     AsyncTaskReplacement.execute(
         () -> {
           // Keep original userId for filtering (no URL encoding for data comparison)
-          String originalUserId = userId;
-          Log.d(TAG, "Getting groups for user: " + originalUserId);
+            Log.d(TAG, "Getting groups for user: " + userId);
 
           // TEMPORARILY skip UserGroups endpoint to test fallback logic
           Log.d(
@@ -1317,10 +1313,10 @@ public class FirebaseServerClient {
 
                 // Debug the group and user relationship
                 boolean isAdmin =
-                    group.getAdminKey() != null && group.getAdminKey().equals(originalUserId);
+                    group.getAdminKey() != null && group.getAdminKey().equals(userId);
                 boolean isMember =
                     group.getFriendKeys() != null
-                        && group.getFriendKeys().containsKey(originalUserId);
+                        && group.getFriendKeys().containsKey(userId);
 
                 Log.d(TAG, "Checking group " + key + " (" + group.getGroupName() + "):");
                 Log.d(
@@ -1333,7 +1329,7 @@ public class FirebaseServerClient {
                         + " (user is member: "
                         + isMember
                         + ")");
-                Log.d(TAG, "  Looking for user: " + originalUserId);
+                Log.d(TAG, "  Looking for user: " + userId);
 
                 // Check if user is in friendKeys or is the admin (using original userId)
                 if (isAdmin || isMember) {
@@ -1344,7 +1340,7 @@ public class FirebaseServerClient {
                   Log.d(
                       TAG,
                       "User "
-                          + originalUserId
+                          + userId
                           + " is not part of group "
                           + key
                           + " ("
@@ -1360,9 +1356,9 @@ public class FirebaseServerClient {
                       + " total groups, found "
                       + userGroupsCount
                       + " groups for user "
-                      + originalUserId);
+                      + userId);
 
-              Log.d(TAG, "Found " + userGroupsMap.size() + " groups for user: " + originalUserId);
+              Log.d(TAG, "Found " + userGroupsMap.size() + " groups for user: " + userId);
               return userGroupsMap;
             } catch (JSONException e) {
               Log.e(TAG, "Error parsing groups", e);
@@ -1374,22 +1370,22 @@ public class FirebaseServerClient {
                 "Failed to connect to server. Please check your internet connection.");
           }
         },
-        new AsyncTaskReplacement.SimpleUICallback<Map<String, Group>>() {
-          @Override
-          public void onPostExecute(Map<String, Group> groups) {
-            if (groups != null) {
-              callback.onSuccess(groups);
-            } else {
-              callback.onError("Unknown error occurred");
-            }
-          }
+            new AsyncTaskReplacement.SimpleUICallback<>() {
+                @Override
+                public void onPostExecute(Map<String, Group> groups) {
+                    if (groups != null) {
+                        callback.onSuccess(groups);
+                    } else {
+                        callback.onError("Unknown error occurred");
+                    }
+                }
 
-          @Override
-          public void onError(Exception error) {
-            Log.e(TAG, "Error getting user groups: " + userId, error);
-            callback.onError(error.getMessage());
-          }
-        });
+                @Override
+                public void onError(Exception error) {
+                    Log.e(TAG, "Error getting user groups: " + userId, error);
+                    callback.onError(error.getMessage());
+                }
+            });
   }
 
   // Helper methods for HTTP requests
@@ -1656,7 +1652,7 @@ public class FirebaseServerClient {
 
       if (method.equals("POST")) {
         requestBuilder.post(body);
-      } else if (method.equals("PUT")) {
+      } else {
         requestBuilder.put(body);
       }
     } else if (method.equals("DELETE")) {
@@ -1672,10 +1668,9 @@ public class FirebaseServerClient {
       Log.d(TAG, method + " response code: " + responseCode + " for URL: " + url);
 
       if (response.isSuccessful()) {
-        String responseBody = response.body() != null ? response.body().string() : "";
-        return responseBody;
+          return response.body() != null ? response.body().string() : "";
       } else {
-        String errorBody = response.body() != null ? response.body().string() : "";
+        String errorBody = response.body().string();
         Log.e(
             TAG,
             method
